Decreased font sizes and padding on mobile max-width 600px and added a display for correct answers when the wrong answer is given

--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,13 @@ body {
   border-radius: 5px 5px 0 0;
 }
 
+.item-img {
+  object-fit: cover;
+  width: 200px;
+  height: auto;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
+}
+
 footer {
   background-color: var(--charcoal);
   border-radius: 0 0 5px 5px;
@@ -241,11 +248,6 @@ li a {
   border-bottom: none;
 }
 
-.item-img {
-  object-fit: cover;
-  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.5);
-}
-
 .container-main {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -280,6 +282,10 @@ li a {
   grid-column: span 3;
 }
 
+.correct-answer-message {
+  display: none;
+}
+
 .sig {
   color: var(--white);
   font-size: 2rem;
@@ -296,7 +302,7 @@ li a {
   }
 
   .flag-container {
-    padding: 1em;
+    padding: 0.5em;
   }
 
   .item-img {
@@ -329,7 +335,12 @@ li a {
   }
 
   .item-type-b__inputs label {
-    font-size: 1rem;
+    font-size: 10px;
+    padding: 5px 10px;
+  }
+
+  .item-inner {
+    font-size: 12px;
   }
 
   footer {
